# kowalski-core

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
assets/vhs/: demo.tape
cmd/: add.go  cook.go  edit.go  find.go  list.go  remove.go  root.go  save.go  serve.go  show.go
internal/config/: config.go
internal/llm/: llm.go
internal/model/: note.go
internal/parser/: parser.go  youtube.go
internal/proto/: service.pb.go  service.proto  service_grpc.pb.go
internal/server/: server.go
internal/service/: service.pb.go  service.proto  service_grpc.pb.go
internal/utils/: palette.csv  print.go
kowalski_core/: main.py
kowalski_core/features/: analysis.py  book.py  database.py  intent.py  magic.py  markdown.py  note.py  parser.py  youtube.py
kowalski_core/features/collect/: markdown.py  note.py  url.py
kowalski_core/features/transform/: analysis.py
kowalski_core/features/utils/: utils.py
kowalski_core/templates/: BRAINSTORM.md  ELABORATE.md  ORGANIZE.md  SUMMARIZE.md  note.md
pkg/add/: add.go
pkg/cook/: cook.go
pkg/edit/: edit.go
pkg/find/: find.go
pkg/list/: list.go
pkg/remove/: remove.go
pkg/save/: save.go
pkg/show/: show.go
src/kowalski/: main.py
src/kowalski/cmd/: add.py  edit.py  find.py  kaboom.py  list.py  open.py  remove.py  save.py  select.py  show.py  sync.py
src/kowalski/internal/: ai.py  config.py  consts.py  git.py  note.py  parse.py  run.py  utils.py
src/kowalski_core/: __init__.py  main.py
src/kowalski_core/cmd/: add.py  edit.py  init.py  kaboom.py  list.py  open.py  save.py  show.py  sync.py
src/kowalski_core/features/: book.py  database.py  download.py  editor.py  (+4 more)
(+16 files in other folders)
