[project]
name = "kowalski-core"
version = "0.2.0"
description = "kowalski-core is a simple think-it-later app for your CLI"
readme = "README.md"
authors = [
    { name = "Matteo Ferrini", email = "mimmi.ferrini@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-frontmatter>=1.1.0",
]

[project.scripts]
kv = "kowalski_core.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
