[project]
name = "kowalski"
version = "0.2.0"
description = "kowalski is a simple think-it-later app for your CLI"
readme = "README.md"
authors = [
    { name = "Matteo Ferrini", email = "mimmi.ferrini@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.44",
    "litellm>=1.57.0",
    "python-frontmatter>=1.1.0",
    "trafilatura>=2.0.0",
    "youtube-transcript-api>=0.6.3",
]

[project.scripts]
kv = "kowalski.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "tuna>=0.5.11",
]
