[project]
name = "kowalski"
version = "0.3.0"
description = "kowalski is a simple think-it-later app for your CLI"
readme = "README.md"
authors = [
    { name = "Matteo Ferrini", email = "mimmi.ferrini@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.5.3",
    "python-frontmatter>=1.1.0",
    "trafilatura>=2.0.0",
    "youtube-transcript-api>=0.6.3",
]

[project.scripts]
ko = "kowalski.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
